--- a/src/main/resources/C3PCoreApp.properties
+++ b/src/main/resources/C3PCoreApp.properties
@@ -5,69 +5,69 @@ spring.servlet.multipart.max-file-size=500KB
 spring.servlet.multipart.max-request-size=500KB
 
 ## Windows based Configuration #######
-#ALL_REQUEST_DETAILS_PATH=/POC1/rest/CreateConfigurationService/getAllRequestsDetail
-#GET_RESPONSES_PATH=/POC1/rest/CreateConfigurationService/getResponse/
-#SAVE_REQUEST_DETAILS_PATH=/POC1/rest/CreateConfigurationService/createConfiguration/
-#RESPONSE_DOWNLOAD_PATH=D:\\C3PConfig\\ConfigurationFiles\\
-#ANALYSER_PATH=D:\\C3PConfig\\Analyser\\
-#RESPONSE_LOG_PATH=D:\\C3PConfig\\Logs\\
-#TEMPLATE_CREATION_PATH=D:\\C3PConfig\\Templates\\
-#NEW_TEMPLATE_CREATION_PATH=D:\\C3PConfig\\NewTemplates\\
-#EXPORT_DOWNLOAD_PATH=D:\\C3PConfig\\RequestExport
-#IMPORT_FILEPATH=D:\\C3PConfig\\ImportedFiles\\
-#RESP_DOWNLOAD_HEALTH_CHECK_REPORTS_PATH=D:\\C3PConfig\\HealthCheckReports\\
-#RESP_DOWNLOAD_VERSION_PATH=D:\\C3PConfig\\VersionInformation
-#CONFIGURATION_FILES_XML=D:\\C3PConfig\\configRouters.xml
-#VNF_CONFIG_CREATION_PATH=D:\\C3PConfig\\VnfConfigurationFiles\\
-
-#PYTHON_SCRIPT_PATH=D:\\C3PConfig\\PythonScript\\
-#STANDARD_CONFIG_PATH=D:\\C3PConfig\\StandardConfiguration\\
-#COMPARISON_HTMLS=D:\\C3PConfig\\ComparisonHtmls\\
-#STATIC_XML_VNF=D:\\C3PConfig\\combinedFeatures.xml
-#SNMP_DUMP= D:\\C3PConfig\\SnmpDump\\
-#FAQ_DOC_PATH=D:\\C3PConfig\\FAQDocPath\\
-#COB_TEMPLATE= D:\\C3PConfig\\COBTemplate\\
-#IMAGE_FILE_PATH= D:\\C3PConfig\\ImageFiles\\
-#FOLDER_SEPARATOR=\\
-#DOWNLOAD_PATH= D:\\C3PConfig\\DownloadFilePath\\
-#SOURCE=  D:\\C3PConfig\\ImageFiles\\
-#TERRAFORM = D:\\C3PConfig\\Terraform\\
-#TERRAFORM_OPENSTACK = D:\\C3PConfig\\Terraform\\Templates\\Openstack\\
-#TERRAFORM_GCP = D:\\C3PConfig\\Terraform\\Templates\\GCP\\
-#REQ_SLASHN=0
-
-## Linux/Container based Configuration #######
 ALL_REQUEST_DETAILS_PATH=/POC1/rest/CreateConfigurationService/getAllRequestsDetail
 GET_RESPONSES_PATH=/POC1/rest/CreateConfigurationService/getResponse/
 SAVE_REQUEST_DETAILS_PATH=/POC1/rest/CreateConfigurationService/createConfiguration/
-RESPONSE_DOWNLOAD_PATH=/opt/C3PConfig/ConfigurationFiles/
-ANALYSER_PATH=/opt/C3PConfig/Analyser/
-RESPONSE_LOG_PATH=/opt/C3PConfig/Logs/
-TEMPLATE_CREATION_PATH=/opt/C3PConfig/Templates/
-NEW_TEMPLATE_CREATION_PATH=/opt/C3PConfig/NewTemplates/
-EXPORT_DOWNLOAD_PATH=/opt/C3PConfig/RequestExport
-IMPORT_FILEPATH=/opt/C3PConfig/ImportedFiles/
-RESP_DOWNLOAD_HEALTH_CHECK_REPORTS_PATH=/opt/C3PConfig/HealthCheckReports/
-RESP_DOWNLOAD_VERSION_PATH=/opt/C3PConfig/VersionInformation
-CONFIGURATION_FILES_XML=/opt/C3PConfig/configRouters.xml
-VNF_CONFIG_CREATION_PATH=/opt/C3PConfig/VnfConfigurationFiles/
+RESPONSE_DOWNLOAD_PATH=D:\\C3PConfig\\ConfigurationFiles\\
+ANALYSER_PATH=D:\\C3PConfig\\Analyser\\
+RESPONSE_LOG_PATH=D:\\C3PConfig\\Logs\\
+TEMPLATE_CREATION_PATH=D:\\C3PConfig\\Templates\\
+NEW_TEMPLATE_CREATION_PATH=D:\\C3PConfig\\NewTemplates\\
+EXPORT_DOWNLOAD_PATH=D:\\C3PConfig\\RequestExport
+IMPORT_FILEPATH=D:\\C3PConfig\\ImportedFiles\\
+RESP_DOWNLOAD_HEALTH_CHECK_REPORTS_PATH=D:\\C3PConfig\\HealthCheckReports\\
+RESP_DOWNLOAD_VERSION_PATH=D:\\C3PConfig\\VersionInformation
+CONFIGURATION_FILES_XML=D:\\C3PConfig\\configRouters.xml
+VNF_CONFIG_CREATION_PATH=D:\\C3PConfig\\VnfConfigurationFiles\\
 
-PYTHON_SCRIPT_PATH=/opt/C3PConfig/PythonScript/
-STANDARD_CONFIG_PATH=/opt/C3PConfig/StandardConfiguration/
-COMPARISON_HTMLS=/opt/C3PConfig/ComparisonHtmls/
-STATIC_XML_VNF=/opt/C3PConfig/combinedFeatures.xml
-SNMP_DUMP=/opt/C3PConfig/SnmpDump/
-FAQ_DOC_PATH=/opt/C3PConfig/FAQDocPath/
-COB_TEMPLATE= /opt/C3PConfig/COBTemplate/
-IMAGE_FILE_PATH= /opt/C3PConfig/ImageFiles/
-FOLDER_SEPARATOR=/
-DOWNLOAD_PATH= /opt/C3PConfig/DownloadFilePath/
-SOURCE=  /opt/C3PConfig/ImageFiles/
-TERRAFORM = /opt/C3PConfig/Terraform/
-TERRAFORM_OPENSTACK = /opt/C3PConfig/Terraform/Templates/Openstack/
-TERRAFORM_GCP = /opt/C3PConfig/Terraform/Templates/GCP/
-FW_UPGADE=http://localhost:8080
+PYTHON_SCRIPT_PATH=D:\\C3PConfig\\PythonScript\\
+STANDARD_CONFIG_PATH=D:\\C3PConfig\\StandardConfiguration\\
+COMPARISON_HTMLS=D:\\C3PConfig\\ComparisonHtmls\\
+STATIC_XML_VNF=D:\\C3PConfig\\combinedFeatures.xml
+SNMP_DUMP= D:\\C3PConfig\\SnmpDump\\
+FAQ_DOC_PATH=D:\\C3PConfig\\FAQDocPath\\
+COB_TEMPLATE= D:\\C3PConfig\\COBTemplate\\
+IMAGE_FILE_PATH= D:\\C3PConfig\\ImageFiles\\
+FOLDER_SEPARATOR=\\
+DOWNLOAD_PATH= D:\\C3PConfig\\DownloadFilePath\\
+SOURCE=  D:\\C3PConfig\\ImageFiles\\
+TERRAFORM = D:\\C3PConfig\\Terraform\\
+TERRAFORM_OPENSTACK = D:\\C3PConfig\\Terraform\\Templates\\Openstack\\
+TERRAFORM_GCP = D:\\C3PConfig\\Terraform\\Templates\\GCP\\
 REQ_SLASHN=0
+
+## Linux/Container based Configuration #######
+#ALL_REQUEST_DETAILS_PATH=/POC1/rest/CreateConfigurationService/getAllRequestsDetail
+#GET_RESPONSES_PATH=/POC1/rest/CreateConfigurationService/getResponse/
+#SAVE_REQUEST_DETAILS_PATH=/POC1/rest/CreateConfigurationService/createConfiguration/
+#RESPONSE_DOWNLOAD_PATH=/opt/C3PConfig/ConfigurationFiles/
+#ANALYSER_PATH=/opt/C3PConfig/Analyser/
+#RESPONSE_LOG_PATH=/opt/C3PConfig/Logs/
+#TEMPLATE_CREATION_PATH=/opt/C3PConfig/Templates/
+#NEW_TEMPLATE_CREATION_PATH=/opt/C3PConfig/NewTemplates/
+#EXPORT_DOWNLOAD_PATH=/opt/C3PConfig/RequestExport
+#IMPORT_FILEPATH=/opt/C3PConfig/ImportedFiles/
+#RESP_DOWNLOAD_HEALTH_CHECK_REPORTS_PATH=/opt/C3PConfig/HealthCheckReports/
+#RESP_DOWNLOAD_VERSION_PATH=/opt/C3PConfig/VersionInformation
+#CONFIGURATION_FILES_XML=/opt/C3PConfig/configRouters.xml
+#VNF_CONFIG_CREATION_PATH=/opt/C3PConfig/VnfConfigurationFiles/
+
+#PYTHON_SCRIPT_PATH=/opt/C3PConfig/PythonScript/
+#STANDARD_CONFIG_PATH=/opt/C3PConfig/StandardConfiguration/
+#COMPARISON_HTMLS=/opt/C3PConfig/ComparisonHtmls/
+#STATIC_XML_VNF=/opt/C3PConfig/combinedFeatures.xml
+#SNMP_DUMP=/opt/C3PConfig/SnmpDump/
+#FAQ_DOC_PATH=/opt/C3PConfig/FAQDocPath/
+#COB_TEMPLATE= /opt/C3PConfig/COBTemplate/
+#IMAGE_FILE_PATH= /opt/C3PConfig/ImageFiles/
+#FOLDER_SEPARATOR=/
+#DOWNLOAD_PATH= /opt/C3PConfig/DownloadFilePath/
+#SOURCE=  /opt/C3PConfig/ImageFiles/
+#TERRAFORM = /opt/C3PConfig/Terraform/
+#TERRAFORM_OPENSTACK = /opt/C3PConfig/Terraform/Templates/Openstack/
+#TERRAFORM_GCP = /opt/C3PConfig/Terraform/Templates/GCP/
+#FW_UPGADE=http://localhost:8080
+#REQ_SLASHN=0
 
 AJAX_CALL_INTERVAL_FOR_PULL_NOTOFICATION=180
 PORT_SSH=22
@@ -84,8 +84,8 @@ NT3=show interface Serial 1/0
 NT4=show version
 NT5=sh ip bgp summary
 FILE_CHUNK_SIZE=40
-#APP_OS=Windows
-APP_OS=Linux
+APP_OS=Windows
+#APP_OS=Linux
 JSCH_CHANNEL_INPUT_BUFFER_SIZE=104857600
 
 REGEX_FILTER_PRE_VALIDATION_OS_VERSION=Show Version|Version|,|0,1,2|0,0,1|,,3
